# POC_qml_module_example

./: CMakeLists.txt  README.md
MainApp/: CMakeLists.txt  main.cpp  main.qml
plugins/UiComponents/: CMakeLists.txt  Plugin.cpp  Plugin.h  UiComponents.qrc  beConfigScreen.cpp  beConfigScreen.h  qmldir
plugins/UiComponents/components/: CmpSlider.qml  ConfigurationScreenPanel.qml  UiButton.qml  UiText.qml
